--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,15 +12,16 @@
 			"runtimeExecutable": null,
 			"runtimeArgs": [
 				"--nolazy",
-        "--harmony"
+				"--harmony"
 			],
 			"env": {
 				"NODE_ENV": "development",
-                "PORT": "3000"
+				"PORT": "3000"
 			},
-			"externalConsole": false,
 			"sourceMaps": true,
-			"outDir": "${workspaceRoot}/app"
+			"outFiles": [
+				"${workspaceRoot}/app/*"
+			]
 		},
 		{
 			"name": "Attach",
