--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "castv2-client": "^1.2.0",
     "cookie-parser": "^1.4.3",
-    "express": "^4.15.2",
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.6",
+    "express": "^4.15.2",
+    "google-tts-api": "0.0.2",
+    "minio": "^4.0.0",
     "morgan": "^1.8.1",
-    "serve-favicon": "^2.4.1"
+    "serve-favicon": "^2.4.1",
+    "voicetext": "0.0.7"
   },
   "devDependencies": {
     "@types/body-parser": "1.16.1",
     "@types/cookie-parser": "^1.3.30",
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.35",
+    "@types/dotenv": "^4.0.2",
+    "@types/minio": "^4.0.1",
     "@types/morgan": "^1.7.32",
     "@types/node": "^7.0.10",
     "@types/serve-favicon": "^2.2.28"
