--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build: .
     environment:
       NODE_ENV: production
+    env_file: .env
     ports:
       - 3000:3000
     network_mode: host
