--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,5 @@ services:
     environment:
       NODE_ENV: production
     env_file: .env
-    ports:
-      - 3000:3000
-    network_mode: host
+    expose:
+      - 3000
