--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.2",
     "google-tts-api": "0.0.2",
     "morgan": "^1.8.1",
+    "ps4-waker": "^1.4.3",
     "serve-favicon": "^2.4.1",
     "voicetext": "0.0.7"
   },
