--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "bluebird": "^3.5.1",
     "castv2-client": "^1.2.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.1",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "1.16.1",
+    "@types/bluebird": "^3.5.20",
     "@types/cookie-parser": "^1.3.30",
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.35",
