--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app/bin/www.js"
   },
   "dependencies": {
+    "actions-on-google": "^1.10.0",
     "body-parser": "^1.17.1",
     "bluebird": "^3.5.1",
     "castv2-client": "^1.2.0",
@@ -21,6 +22,7 @@
     "wol": "^1.0.3"
   },
   "devDependencies": {
+    "@types/actions-on-google": "^1.8.0",
     "@types/body-parser": "1.16.1",
     "@types/bluebird": "^3.5.20",
     "@types/cookie-parser": "^1.3.30",
