--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node app/bin/www.js"
+    "start": "node app/bin/www.js",
+    "build": "gulp build:dev"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
     "bluebird": "^3.5.1",
+    "body-parser": "^1.17.1",
     "castv2-client": "^1.2.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.1",
@@ -21,14 +22,31 @@
     "wol": "^1.0.3"
   },
   "devDependencies": {
-    "@types/body-parser": "1.16.1",
     "@types/bluebird": "^3.5.20",
+    "@types/body-parser": "1.16.1",
     "@types/cookie-parser": "^1.3.30",
+    "@types/dotenv": "^4.0.2",
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.35",
-    "@types/dotenv": "^4.0.2",
+    "@types/gulp": "^4.0.5",
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/morgan": "^1.7.32",
     "@types/node": "^7.0.10",
-    "@types/serve-favicon": "^2.2.28"
+    "@types/serve-favicon": "^2.2.28",
+    "@types/webpack": "^4.4.9",
+    "@types/webpack-stream": "^3.2.10",
+    "gulp": "^3.9.1",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.1.0",
+    "ts-loader": "^4.4.2",
+    "ts-node": "^7.0.0",
+    "vue": "^2.5.17",
+    "vue-class-component": "^6.2.0",
+    "vue-property-decorator": "^7.0.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "webpack": "^4.16.4",
+    "webpack-stream": "^5.1.0"
   }
 }
