--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "wol": "^1.0.3"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.20",
     "@types/body-parser": "1.16.1",
     "@types/cookie-parser": "^1.3.30",
     "@types/dotenv": "^4.0.2",
@@ -30,13 +29,16 @@
     "@types/express": "^4.0.35",
     "@types/gulp": "^4.0.5",
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/morgan": "^1.7.32",
     "@types/node": "^7.0.10",
     "@types/serve-favicon": "^2.2.28",
     "@types/webpack": "^4.4.9",
     "@types/webpack-stream": "^3.2.10",
+    "css-loader": "^1.0.0",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.1.0",
     "ts-loader": "^4.4.2",
