--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "body-parser": "^1.17.1",
     "castv2-client": "^1.2.0",
     "cookie-parser": "^1.4.3",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "google-tts-api": "0.0.2",
@@ -22,7 +22,7 @@
     "wol": "^1.0.3"
   },
   "devDependencies": {
-    "@types/body-parser": "1.16.1",
+    "@types/body-parser": "1.17.0",
     "@types/cookie-parser": "^1.3.30",
     "@types/dotenv": "^4.0.2",
     "@types/ejs": "^2.3.33",
@@ -31,16 +31,15 @@
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.10",
+    "@types/node": "^10.5.7",
     "@types/serve-favicon": "^2.2.28",
     "@types/webpack": "^4.4.9",
     "@types/webpack-stream": "^3.2.10",
     "css-loader": "^1.0.0",
     "gulp": "^3.9.1",
+    "gulp-typescript": "^5.0.0-alpha.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.2",
-    "sass-loader": "^7.1.0",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.0",
     "vue": "^2.5.17",
