--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app/bin/www.js",
-    "build": "gulp build:dev"
+    "build": "gulp build"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -12,7 +12,6 @@
     "castv2-client": "^1.2.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
-    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "google-tts-api": "0.0.2",
     "morgan": "^1.8.1",
@@ -27,7 +26,7 @@
     "@types/dotenv": "^4.0.2",
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.35",
-    "@types/gulp": "^4.0.5",
+    "@types/gulp": "^3.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/morgan": "^1.7.32",
@@ -37,11 +36,13 @@
     "@types/webpack-stream": "^3.2.10",
     "css-loader": "^1.0.0",
     "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.0",
+    "typescript": "^3.0.1",
     "vue": "^2.5.17",
     "vue-class-component": "^6.2.0",
     "vue-property-decorator": "^7.0.0",
