--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,13 +4,16 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "build",
       "type": "npm",
       "script": "build",
       "group": {
         "kind": "build",
         "isDefault": true
       },
-      "problemMatcher": []
+      "problemMatcher": [
+        "$gulp-tsc",
+      ]
     }
   ]
 }
