--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/body-parser": "1.17.0",
     "@types/cookie-parser": "^1.3.30",
     "@types/dotenv": "^4.0.2",
-    "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.35",
     "@types/gulp": "^3.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
@@ -38,6 +37,7 @@
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "ts-loader": "^4.4.2",
