--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^10.5.7",
     "@types/serve-favicon": "^2.2.28",
     "@types/webpack": "^4.4.9",
+    "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-stream": "^3.2.10",
     "css-loader": "^1.0.0",
     "gulp": "^3.9.1",
@@ -49,6 +50,8 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "webpack": "^4.16.4",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-livereload-plugin": "^2.1.1",
     "webpack-stream": "^5.1.0"
   }
 }
