--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node app/bin/www.js",
-    "build": "gulp build"
+    "start": "cross-env NODE_ENV=production node app/bin/www.js",
+    "build": "cross-env NODE_ENV=production gulp build",
+    "dev": "cross-env NODE_ENV=development gulp build"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/body-parser": "1.17.0",
     "@types/cookie-parser": "^1.3.30",
+    "@types/del": "^3.0.1",
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.0.35",
     "@types/gulp": "^3.0.0",
@@ -34,7 +36,9 @@
     "@types/webpack": "^4.4.9",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-stream": "^3.2.10",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
@@ -52,6 +56,7 @@
     "webpack": "^4.16.4",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-livereload-plugin": "^2.1.1",
-    "webpack-stream": "^5.1.0"
+    "webpack-stream": "^5.1.0",
+    "workbox-webpack-plugin": "^3.4.1"
   }
 }
