--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "del": "^3.0.0",
+    "file-loader": "^1.1.11",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "material-design-icons-iconfont": "^3.0.3",
     "mini-css-extract-plugin": "^0.4.1",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.0",
