--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vue-router": "^3.0.1",
     "vuetify": "^1.1.12",
     "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
     "webpack-livereload-plugin": "^2.1.1",
     "webpack-stream": "^5.1.0",
     "workbox-webpack-plugin": "^3.4.1"
