--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "vue-router": "^3.0.1",
     "vuetify": "^1.1.12",
     "vuex": "^3.0.1",
+    "vuex-class": "^0.3.1",
     "vuex-persistedstate": "^2.5.4",
+    "vuex-type-helper": "^1.2.0",
     "webpack-livereload-plugin": "^2.1.1",
     "webpack-stream": "^5.1.0",
     "workbox-webpack-plugin": "^3.4.1"
