--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "wol": "^1.0.3"
   },
   "devDependencies": {
+    "@mdi/font": "^2.6.95",
     "@types/body-parser": "1.17.0",
     "@types/cookie-parser": "^1.3.30",
     "@types/del": "^3.0.1",
