--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.17.1",
     "castv2-client": "^1.2.0",
+    "connect-history-api-fallback": "^1.5.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.15.2",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@mdi/font": "^2.6.95",
     "@types/body-parser": "1.17.0",
+    "@types/connect-history-api-fallback": "^1.3.1",
     "@types/cookie-parser": "^1.3.30",
     "@types/del": "^3.0.1",
     "@types/dotenv": "^4.0.2",
