デプロイ処理修正

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,6 +21,17 @@
       "script": "start",
       "isBackground": true,
       "problemMatcher": []
+    },
+    {
+      "label": "deploy",
+      "type": "shell",
+      "command": "ansible-playbook",
+      "args": [
+        "-i",
+        "deploy/hosts",
+        "playbook.yml"
+      ],
+      "problemMatcher": []
     }
   ]
 }
