--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "dotenv": "^6.0.0",
     "express": "^4.15.2",
     "google-tts-api": "0.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "morgan": "^1.8.1",
     "ps4-waker": "^1.4.3",
     "serve-favicon": "^2.4.1",
     "voicetext": "0.0.7",
     "webpack": "^4.16.4",
     "webpack-dev-middleware": "^3.1.3",
-    "wol": "^1.0.3"
+    "webpack-livereload-plugin": "^2.1.1",
+    "wol": "^1.0.3",
+    "workbox-webpack-plugin": "^3.4.1"
   },
   "devDependencies": {
     "@mdi/font": "^2.6.95",
@@ -50,9 +54,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "material-design-icons-iconfont": "^3.0.3",
-    "mini-css-extract-plugin": "^0.4.1",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.0",
     "typescript": "^3.0.1",
@@ -65,8 +67,6 @@
     "vuex-class": "^0.3.1",
     "vuex-persistedstate": "^2.5.4",
     "vuex-type-helper": "^1.2.0",
-    "webpack-livereload-plugin": "^2.1.1",
-    "webpack-stream": "^5.1.0",
-    "workbox-webpack-plugin": "^3.4.1"
+    "webpack-stream": "^5.1.0"
   }
 }
