開発環境の調整

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
         "PORT": "3000"
       },
       "sourceMaps": true,
-      "preLaunchTask": "build"
+      "preLaunchTask": "dev:build"
     },
     {
       "name": "Attach",
