--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack": "^4.16.4",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-livereload-plugin": "^2.1.1",
+    "webpack-pwa-manifest": "^3.7.1",
     "wol": "^1.0.3",
     "workbox-webpack-plugin": "^3.4.1"
   },
