--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.3",
     "connect-history-api-fallback": "^1.5.0",
     "cookie-parser": "^1.4.3",
+    "critters-webpack-plugin": "^1.1.0",
     "dotenv": "^6.0.0",
     "express": "^4.15.2",
     "google-tts-api": "0.0.2",
