VSCodeでサーバーをデバッグできるように修正

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,10 @@
         "PORT": "3000"
       },
       "sourceMaps": true,
-      "preLaunchTask": "dev:build"
+      "preLaunchTask": "dev:build",
+      "outFiles": [
+        "${workspaceRoot}/app/**/*.js"
+      ]
     },
     {
       "name": "Attach",
