--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,19 +7,23 @@
       "request": "launch",
       "program": "${workspaceRoot}/app/bin/www.js",
       "stopOnEntry": false,
-      "args": [],
       "cwd": "${workspaceRoot}/",
-      "runtimeExecutable": null,
+      "runtimeExecutable": "nodemon",
       "runtimeArgs": [
         "--nolazy",
-        "--harmony"
+        "--harmony",
+        "-w",
+        "${workspaceRoot}/app",
+        "-i",
+        "${workspaceRoot}/app/public",
       ],
+      "restart": true,
+      "console": "integratedTerminal",
       "env": {
         "NODE_ENV": "development",
         "PORT": "3000"
       },
       "sourceMaps": true,
-      "preLaunchTask": "dev:build",
       "outFiles": [
         "${workspaceRoot}/app/**/*.js"
       ]
