--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,13 @@
       ]
     },
     {
+      "label": "watch",
+      "type": "npm",
+      "script": "watch",
+      "isBackground": true,
+      "problemMatcher": []
+    },
+    {
       "label": "prod:build",
       "type": "npm",
       "script": "build",
