--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,25 @@
       "problemMatcher": []
     },
     {
+      "label": "dev:start",
+      "dependsOn": "dev:build",
+      "type": "shell",
+      "command": "nodemon",
+      "args": [
+        "-w",
+        "${workspaceRoot}/app",
+        "-i",
+        "${workspaceRoot}/app/public"
+      ],
+      "options": {
+        "env": {
+          "NODE_ENV": "development",
+          "PORT": "3000"
+        }
+      },
+      "problemMatcher": []
+    },
+    {
       "label": "prod:build",
       "type": "npm",
       "script": "build",
