--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "watch": "cross-env NODE_ENV=development gulp watch"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "bluebird": "^3.5.2",
     "body-parser": "^1.17.1",
     "castv2-client": "^1.2.0",
     "compression": "^1.7.3",
     "connect-history-api-fallback": "^1.5.0",
     "cookie-parser": "^1.4.3",
-    "critters-webpack-plugin": "^1.2.1",
-    "dotenv": "^6.0.0",
+    "critters-webpack-plugin": "^2.4.0",
+    "dotenv": "^8.1.0",
     "express": "^4.15.2",
-    "google-tts-api": "0.0.3",
+    "google-tts-api": "0.0.4",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^0.8.0",
     "morgan": "^1.9.1",
     "ps4-waker": "^1.5.1",
     "serve-favicon": "^2.4.1",
@@ -29,46 +29,49 @@
     "webpack": "^4.20.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-livereload-plugin": "^2.1.1",
-    "webpack-pwa-manifest": "^3.7.1",
+    "webpack-pwa-manifest": "^4.0.0",
     "wol": "^1.0.5",
-    "workbox-webpack-plugin": "^3.6.2"
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "devDependencies": {
-    "@mdi/font": "^2.8.94",
+    "@mdi/font": "^4.0.96",
     "@types/body-parser": "1.17.0",
-    "@types/compression": "^0.0.36",
+    "@types/compression": "^1.0.0",
     "@types/connect-history-api-fallback": "^1.3.1",
     "@types/cookie-parser": "^1.3.30",
-    "@types/del": "^3.0.1",
-    "@types/dotenv": "^4.0.2",
+    "@types/del": "^4.0.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.0.35",
     "@types/gulp": "^4.0.5",
     "@types/html-webpack-plugin": "^3.2.0",
-    "@types/mini-css-extract-plugin": "^0.2.0",
+    "@types/mini-css-extract-plugin": "^0.8.0",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^10.11.4",
+    "@types/node": "^12.7.2",
     "@types/serve-favicon": "^2.2.28",
     "@types/webpack": "^4.4.14",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-stream": "^3.2.10",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "del": "^3.0.0",
-    "file-loader": "^2.0.0",
+    "css-loader": "^3.2.0",
+    "del": "^5.0.0",
+    "fibers": "^4.0.1",
+    "file-loader": "^4.2.0",
     "gulp": "^4.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
     "html-loader": "^0.5.5",
-    "material-design-icons-iconfont": "^3.0.3",
+    "material-design-icons-iconfont": "^5.0.1",
     "nodemon": "^1.18.4",
-    "ts-loader": "^5.2.1",
-    "ts-node": "^7.0.1",
+    "sass": "^1.22.10",
+    "sass-loader": "^7.2.0",
+    "ts-loader": "^6.0.4",
+    "ts-node": "^8.3.0",
     "typescript": "^3.1.1",
     "vue": "^2.5.17",
-    "vue-class-component": "^6.2.0",
-    "vue-property-decorator": "^7.2.0",
+    "vue-class-component": "^7.1.0",
+    "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.2.6",
+    "vuetify": "^2.0.7",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1",
     "vuex-persistedstate": "^2.5.4",
