--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.1",
-    "vuetify": "^2.0.7",
+    "vuetify": "^2.0.10",
+    "vuetify-loader": "^1.3.0",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1",
     "vuex-persistedstate": "^2.5.4",
