--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,27 +1,31 @@
 // See https://aka.ms/vscode-remote/devcontainer.json for format details.
 {
-	"name": "Node.js (latest LTS) & TypeScript",
-	"dockerFile": "Dockerfile",
+  "name": "Node.js (latest LTS) & TypeScript",
+  "dockerFile": "Dockerfile",
 
-	// Uncomment the next line if you want to publish any ports.
-	"appPort": [
-		"3000"
-	],
+  "runArgs": [
+    "-v",
+    "${env:HOME}${env:USERPROFILE}/.ssh:/root/.ssh-localhost:ro"
+  ],
 
-	// Uncomment the next line if you want to add in default container specific settings.json values
-	// "settings":  { "workbench.colorTheme": "Quiet Light" },
+  // Uncomment the next line if you want to publish any ports.
+  "appPort": ["3000"],
 
-	// Uncomment the next line to run commands after the container is created.
-	"postCreateCommand": "yarn install",
+  // Uncomment the next line if you want to add in default container specific settings.json values
+  // "settings":  { "workbench.colorTheme": "Quiet Light" },
 
-	"extensions": [
-		"ms-vscode.vscode-typescript-tslint-plugin",
-		"eamodio.gitlens",
-		"gamunu.vscode-yarn",
-		"visualstudioexptteam.vscodeintellicode",
-		"octref.vetur",
-		"prograhammer.tslint-vue",
-		"esbenp.prettier-vscode",
-		"christian-kohler.path-intellisense"
-	]
+  // Uncomment the next line to run commands after the container is created.
+  "postCreateCommand": "mkdir -p ~/.ssh && cp -r ~/.ssh-localhost/* ~/.ssh && chmod 700 ~/.ssh && chmod 600 ~/.ssh/* && yarn install",
+
+  "extensions": [
+    "ms-vscode.vscode-typescript-tslint-plugin",
+    "eamodio.gitlens",
+    "gamunu.vscode-yarn",
+    "visualstudioexptteam.vscodeintellicode",
+    "octref.vetur",
+    "prograhammer.tslint-vue",
+    "esbenp.prettier-vscode",
+    "christian-kohler.path-intellisense",
+    "mutantdino.resourcemonitor"
+  ]
 }
