--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,5 +9,9 @@
   },
   "bugs": {
     "url": "https://github.com/Freeesia/SmartHomeHub/issues"
+  },
+  "devDependencies": {
+    "ts-node": "^8.3.0",
+    "typescript": "^3.6.2"
   }
 }
