--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,13 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2",
+    "vuex-persistedstate": "^2.5.4",
+    "vuex-type-helper": "^1.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.11.0",
