--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,14 @@
     "url": "https://github.com/Freeesia/SmartHomeHub/issues"
   },
   "devDependencies": {
+    "@types/compression": "^1.0.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2"
+  },
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
