--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,14 +11,27 @@
     "url": "https://github.com/Freeesia/SmartHomeHub/issues"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.27",
     "@types/compression": "^1.0.1",
+    "@types/connect-history-api-fallback": "^1.3.3",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.1",
+    "@types/morgan": "^1.7.37",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bluebird": "^3.5.5",
+    "castv2-client": "^1.2.0",
     "compression": "^1.7.4",
+    "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "google-tts-api": "^0.0.4",
+    "morgan": "^1.9.1",
+    "ps4-waker": "^1.8.6",
+    "voicetext": "^0.0.7",
+    "wol": "^1.0.6"
   }
 }
