--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,6 +2,15 @@
   "name": "client",
   "version": "0.0.0",
   "private": true,
+  "author": "Freesia <freesia@studiofreesia.com>",
+  "homepage": "https://github.com/Freeesia/SmartHomeHub#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Freeesia/SmartHomeHub.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Freeesia/SmartHomeHub/issues"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
