--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,18 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Server",
+      "runtimeExecutable": "yarn",
+      "runtimeArgs": [
+        "workspace",
+        "server",
+        "serve"
+      ],
+      "port": 9229
+    },
+    {
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome",
