--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,6 +21,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.1",
     "@types/morgan": "^1.7.37",
+    "@types/multer": "^1.3.9",
     "nodemon": "^1.19.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2"
@@ -35,7 +36,11 @@
     "express": "^4.17.1",
     "google-tts-api": "^0.0.4",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "ps4-waker": "^1.8.6",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.7.7",
+    "typedi": "^0.8.0",
     "voicetext": "^0.0.7",
     "wol": "^1.0.6"
   }
