--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,69 +4,29 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "dev:build",
-      "type": "npm",
-      "script": "dev",
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
-      "problemMatcher": [
-        "$gulp-tsc"
-      ]
-    },
-    {
-      "label": "watch",
-      "type": "npm",
-      "script": "watch",
-      "isBackground": true,
-      "problemMatcher": []
-    },
-    {
-      "label": "dev:start",
-      "dependsOn": "dev:build",
+      "label": "server:serve",
       "type": "shell",
-      "command": "nodemon",
-      "args": [
-        "-w",
-        "${workspaceRoot}/app",
-        "-i",
-        "${workspaceRoot}/app/public"
-      ],
-      "options": {
-        "env": {
-          "NODE_ENV": "development",
-          "PORT": "3000"
-        }
-      },
-      "problemMatcher": []
-    },
-    {
-      "label": "prod:build",
-      "type": "npm",
-      "script": "build",
-      "problemMatcher": []
-    },
-    {
-      "label": "prod:start",
-      "dependsOn": "prod:build",
-      "type": "shell",
-      "isBackground": true,
       "command": "yarn",
-      "args": [
-        "start"
-      ],
+      "args": ["workspace", "server", "serve"],
+      "isBackground": true
+    },
+    {
+      "label": "client:serve",
+      "type": "shell",
+      "command": "yarn",
+      "args": ["workspace", "client", "serve"],
+      "isBackground": true
+    },
+    {
+      "label": "serve",
+      "dependsOn": ["server:serve", "client:serve"],
       "problemMatcher": []
     },
     {
       "label": "deploy",
       "type": "shell",
       "command": "ansible-playbook",
-      "args": [
-        "-i",
-        "deploy/hosts",
-        "playbook.yml"
-      ],
+      "args": ["-i", "deploy/hosts", "playbook.yml"],
       "problemMatcher": []
     }
   ]
