VSCodeでクライアントをデバッグ出来るように

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,7 @@
     {
       "label": "serve",
       "dependsOn": ["server:serve", "client:serve"],
+      "isBackground": true,
       "problemMatcher": []
     },
     {
