--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,7 @@
       "request": "launch",
       "name": "Launch Server",
       "runtimeExecutable": "yarn",
-      "runtimeArgs": [
-        "workspace",
-        "server",
-        "serve"
-      ],
+      "runtimeArgs": ["workspace", "server", "serve"],
       "restart": true,
       "port": 9229
     },
@@ -18,35 +14,11 @@
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome",
-      "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}/client",
-      "sourceMaps": true
-    },
-    {
-      "name": "Launch",
-      "type": "node",
-      "request": "launch",
-      "program": "${workspaceRoot}/app/bin/www.js",
-      "cwd": "${workspaceRoot}/",
-      "runtimeExecutable": "nodemon",
-      "runtimeArgs": [
-        "--nolazy",
-        "--harmony",
-        "-w",
-        "${workspaceRoot}/app",
-        "-i",
-        "${workspaceRoot}/app/public"
-      ],
-      "restart": true,
-      "env": {
-        "NODE_ENV": "development",
-        "PORT": "3000"
+      "url": "http://localhost:8080",
+      "webRoot": "${workspaceFolder}/packages/client/src",
+      "sourceMapPathOverrides": {
+        "webpack:///./src/*": "${webRoot}/*"
       },
-      "smartStep": true,
-      "skipFiles": ["node_modules/**"],
-      "preLaunchTask": "dev:build",
-      "sourceMaps": true,
-      "outFiles": ["${workspaceRoot}/app/**/*.js"]
     }
   ]
 }
