ビルドコマンド追加

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,6 +24,15 @@
       "problemMatcher": []
     },
     {
+      "label": "build",
+      "command": "lerna",
+      "args": ["run", "build"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
       "label": "deploy",
       "type": "shell",
       "command": "ansible-playbook",
