--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.1",
     "@types/morgan": "^1.7.37",
     "@types/multer": "^1.3.9",
+    "@types/passport": "^1.0.1",
     "nodemon": "^1.19.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2"
@@ -37,6 +38,8 @@
     "google-tts-api": "^0.0.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "passport": "^0.4.0",
+    "passport-ldapauth": "^2.1.3",
     "ps4-waker": "^1.8.6",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
