--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,6 +20,7 @@
     "@types/connect-history-api-fallback": "^1.3.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.1",
+    "@types/express-session": "^1.15.14",
     "@types/morgan": "^1.7.37",
     "@types/multer": "^1.3.9",
     "@types/passport": "^1.0.1",
@@ -35,6 +36,7 @@
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "google-tts-api": "^0.0.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
