コンテナ内からクライアントをデバッグするための設定

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,7 @@
   ],
 
   // Uncomment the next line if you want to publish any ports.
-  "appPort": ["3000"],
+  "appPort": ["3000", "8080:8080"],
 
   // Uncomment the next line if you want to add in default container specific settings.json values
   // "settings":  { "workbench.colorTheme": "Quiet Light" },
