--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,9 +25,7 @@
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
     "vuex": "^3.0.1",
-    "vuex-class": "^0.3.2",
-    "vuex-persistedstate": "^2.5.4",
-    "vuex-type-helper": "^1.2.2"
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.11.0",
@@ -46,6 +44,7 @@
     "typescript": "^3.4.3",
     "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2"
+    "vuetify-loader": "^1.2.2",
+    "vuex-module-decorators": "^0.10.1"
   }
 }
