ログアウト処理修正

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,7 @@
     "prograhammer.tslint-vue",
     "esbenp.prettier-vscode",
     "christian-kohler.path-intellisense",
-    "mutantdino.resourcemonitor"
+    "mutantdino.resourcemonitor",
+    "humao.rest-client"
   ]
 }
